fix(btn): alignment

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -12,6 +12,7 @@
 	i {
 		// vertical-align: middle;
 		font-size: 21px;
+		margin: 0;
 	}
 
 	&::before {
